# A1PHquest

./: .env.template  .gitignore  HANDOFF.md  Makefile  README.md  bootstrap-from-github.sh  install.sh  pyproject.toml
deploy/: backup.sh  check_runtime_consistency.py  db_migrate.sh  docker-compose.yml  e2e_runtime_flow.py  health_monitor.py  install.sh  lighter_reconcile_maintenance.py  ops_snapshot.py  p16_acceptance_report.py  p16_archive_evidence.py  p16_auto_finalize_watch.sh  p16_finalize_after_soak.py  p16_soak.sh  p16_soak_analyze.py  p16_soak_background.sh  p17_p20_merged_gate.sh  p20_rc_gate.sh  p20_release_checklist.py  p20_release_manifest.py  p5s_oneclick.ps1  p5s_oneclick.sh  p9_drill.sh  release_gate.sh  restore_backup.sh  rotate_aes_master_key.py  smoke_test_api.py  smoke_test_sync_endpoint.py  stack.sh  stack_wsl.sh  update-and-verify.sh  update-from-github.sh
docs/: api.md  architecture.md  deployment.md  roadmap.md  runbook.md
examples/: dca.py  funding_rate_arbitrage.py  grid_trading.py  spot_future_arbitrage.py
tests/: conftest.py  test_ai_autopilot_service.py  test_ai_policy_risk_gate.py  test_ai_provider_security.py  test_alembic_startup.py  test_auth.py  test_auth_register.py  test_auth_security_hardening.py  test_auth_session_revocation.py  test_auth_step_up.py  test_bootstrap_admin.py  test_circuit_breaker_service.py  test_config_ws_replay_guard.py  test_csrf_middleware.py  test_deps_cookie_auth.py  test_deps_require_2fa.py  test_events_replay_router.py  test_exchange_account_consistency.py  test_exchange_account_order_history.py  (+47 more)
(+90 files in other folders)
