[project]
name = "a1phquest"
version = "0.1.0"
description = "A1phquest monorepo based on VeighNa(vn.py) ecosystem."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "A1phquest Team" }
]
dependencies = [
  "fastapi==0.135.1",
  "uvicorn[standard]==0.42.0",
  "sqlalchemy==2.0.48",
  "psycopg2-binary==2.9.10",
  "alembic==1.16.0",
  "PyJWT==2.12.1",
  "passlib[bcrypt]==1.7.4",
  "pyotp==2.9.0",
  "qrcode==8.2",
  "pydantic-settings==2.13.1",
  "httpx==0.28.1",
  "websockets==16.0",
  "email-validator==2.3.0",
  "cryptography==46.0.5",
  "vnpy==4.3.0",
  "vnpy-binance==2026.3.6",
  "vnpy-okx==2026.2.28"
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-asyncio==1.1.0",
  "httpx==0.28.1",
  "ruff==0.12.0",
  "mypy==1.17.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["apps/api", "apps/worker-supervisor", "packages/a1phquest_crypto/src", "packages/a1phquest_security/src"]
